--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="header">
 
-      <img src="Assets/Images/neko.png" alt="profile" id="pfp">
+      <img src="neko.png" alt="profile" id="pfp">
 
       <div class="botName">
 
