--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <link rel="stylesheet" href="style.css" title="" type="" />
 
-  <script src="https://prasantkumar123.github.io/dev-call/main.js"></script>
+  <!-- <script src="https://prasantkumar123.github.io/dev-call/main.js"></script> -->
 
   <script src="https://code.responsivevoice.org/responsivevoice.js?key=LZyNCg0Z"></script>
 
