--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
   </ul>
 
-  <audio src="Assets/Audio/typing.mp3" id="typing-sound" controls></audio>
+  <!-- <audio src="Assets/Audio/typing.mp3" id="typing-sound" controls></audio> -->
 
   <!--script src="https://prasantkumar123.github.io/dev-call/main.js"></script-->
 
