--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <link rel="stylesheet" href="style.css" title="" type="" />
 
   <!-- <script src="https://prasantkumar123.github.io/dev-call/main.js"></script> -->
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+  <!-- <script src="https://kit.fontawesome.com/d9556825ad.js" crossorigin="anonymous" difer></script> -->
 
   <script src="https://code.responsivevoice.org/responsivevoice.js?key=LZyNCg0Z"></script>
 
@@ -65,6 +67,8 @@
       <div id="send-btn">
 
         <i class="material-icons giftab">mic</i>
+        <!-- <i class="fas fa-microphone dark-mode "></i> -->
+        <!-- <i class="far fa-paper-plane" style="color: rgb(255,255,255);"></i> -->
 
       </div>
 
